# PolyHook_2_0

./: .clang-format  .gitignore  .gitmodules  BuildCapstone.bat  BuildCapstoneUnix.sh  CMakeLists.txt  CMakeSettings.json  Catch.hpp  MainTests.cpp  PolyHook.h  PolyHook_2-config.cmake.in  Polyhook_2-config.cmake.in  README.md  TODO.md  index.md  launch.vs.json  maintests_crypt.cpp  polyhook_2-config.cmake.in  t
.github/: FUNDING.yml
.github/workflows/: action.yml  main.yml
ExampleProject/ExampleProject/: CMakeLists.txt  CMakeSettings.json
ExampleProject/ExampleProject/ExampleProject/: CMakeLists.txt  ExampleProject.cpp  ExampleProject.h
Examples/VCPKG_DynamicLink/: CMakeLists.txt  CMakeSettings.json  main.cpp
Examples/VCPKG_StaticLink/: .gitignore  CMakeLists.txt  CMakeSettings.json  main.cpp  vcpkg.json
UnitTests/: Disassembler.cpp  ErrorSystem.cpp  TestAsmJit.cpp  TestBreakpointHook.cpp  TestDetour.cpp  TestDetourNoTDx64.cpp  TestDetourNoTDx86.cpp  TestDetourx64.cpp  TestDetourx86.cpp  TestDisassembler.cpp  TestEatHook.cpp  TestErrorSystem.cpp  TestHWBreakpointHook.cpp  TestIatHook.cpp  TestMemProtector.cpp  TestPageFaultHook.cpp  TestUtils.cpp  TestUtils.hpp  TestVFuncSwapHook.cpp  TestVTableSwapHook.cpp  TestVTableSwapHook2.cpp
UnitTests/UnixTests/: TestMemAllocator.cpp
UnitTests/linux/: TestDetourTranslationx64.cpp  TestDetourx64.cpp  TestDetourx86.cpp  TestDetourx86hotpatch.cpp  TestDisassembler.cpp  TestMemProtector.cpp
UnitTests/windows/: TestDetourNoTDx64.cpp  TestDetourNoTDx86.cpp  TestDetourRelativex64.cpp  TestDetourSchemex64.cpp  TestDetourTranslationx64.cpp  TestDetourx64.cpp  TestDetourx86.cpp  TestDetourx86hotpatch.cpp  TestDisassembler.cpp  TestEatHook.cpp  TestIatHook.cpp  TestMemProtector.cpp  TestVTableSwapHook.cpp  TestVTableSwapHook2.cpp
docs/: index.md
headers/: ADisassembler.hpp  CapstoneDisassembler.hpp  Enums.hpp  ErrorLog.hpp  ErrorSystem.hpp  Finally.hpp  IHook.hpp  Instruction.hpp  Maybe.hpp  MemAllocator.hpp  MemProtector.hpp  MemoryProtector.hpp  Misc.hpp  PageAllocator.hpp  UID.hpp  ZydisDisassembler.hpp
headers/Detour/: ADetour.hpp  ILCallback.hpp  x64Detour.hpp  x64DetourImp.hpp  x86Detour.hpp  x86DetourImp.hpp
headers/Exceptions/: AVehHook.hpp  BreakPointHook.hpp  HWBreakPointHook.hpp  PageFaultHook.hpp
headers/MemoryAllocation/: ARangAllocator.hpp  AllocatedMemoryBlock.hpp  MemoryBlock.hpp  MemoryProtector.hpp  RangeAllocator.hpp
headers/MemoryAllocation/UnixImpl/: RangeMemAllocatorUnixImp.hpp  UnixMemProtImp.hpp
headers/PE/: EatHook.hpp  IatHook.hpp  PEB.hpp
headers/Tests/: TestEffectTracker.hpp
headers/Virtuals/: VFuncSwapHook.hpp  VTableSwapHook.hpp
polyhook2/: ADisassembler.hpp  CapstoneDisassembler.hpp  Enums.hpp  ErrorLog.hpp  EventDispatcher.hpp  FBAllocator.hpp  IHook.hpp  Instruction.hpp  MemAccessor.hpp  MemProtector.hpp  Misc.hpp  PageAllocator.hpp  PolyHookOs.hpp  PolyHookOsIncludes.hpp  RangeAllocator.hpp  UID.hpp  ZydisDisassembler.hpp
polyhook2/Detour/: ADetour.hpp  ILCallback.hpp  NatDetour.hpp  x64Detour.hpp  x86Detour.hpp  x86HotpatchDetour.hpp
polyhook2/Exceptions/: AVehHook.hpp  BreakPointHook.hpp  HWBreakPointHook.hpp
polyhook2/PE/: EatHook.hpp  IatHook.hpp  PEB.hpp
polyhook2/Tests/: StackCanary.hpp  TestEffectTracker.hpp
polyhook2/Virtuals/: VFuncSwapHook.hpp  VTableSwapHook.hpp
sources/: ADetour.cpp  ADisassembler.cpp  AVehHook.cpp  AllocatedMemoryBlock.cpp  BreakPointHook.cpp  CapstoneDisassembler.cpp  EatHook.cpp  ErrorLog.cpp  FBAllocator.cpp  HWBreakPointHook.cpp  ILCallback.cpp  IatHook.cpp  Instruction.cpp  InternalUtils.hpp  MemAccessor.cpp  MemProtector.cpp  MemoryBlock.cpp  Misc.cpp  PageAllocator.cpp  PageFaultHook.cpp  PolyHookOs.cpp  RangeAllocator.cpp  RangeMemAllocatorUnixImp.cpp  StackCanary.cpp  TestEffectTracker.cpp  UID.cpp  VFuncSwapHook.cpp  VTableSwapHook.cpp  ZydisDisassembler.cpp  x64Detour.cpp  x64DetourImp.cpp  x86Detour.cpp  x86DetourImp.cpp  x86HotpatchDetour.cpp
src/: ADetour.hpp  ADisassembler.hpp  CapstoneDisassembler.hpp  Enums.hpp  ErrorSystem.hpp  IDisassembler.hpp  IHook.hpp  Instruction.hpp  Maybe.hpp  MemAllocator.hpp  MemoryBlock.hpp  Misc.hpp  PolyHook.h  TestErrorSystem.hpp  UID.hpp
src/Detour/: ADetour.hpp  x64DetourImpl.hpp  x86DetourImpl.hpp
src/MemoryAllocation/: AMemAllocator.hpp  ARangAllocator.hpp  ARangeMemAllocator.hpp  AllocatedMemoryBlock.cpp  AllocatedMemoryBlock.hpp  MemoryBlock.hpp  RangeAllocator.hpp  RangeMemoryAllocatorObjectTraits.h  RangeMemoryAllocatorObjectTraits.hpp  RangeMemoryAllocatorPolicy.hpp  RangeMemorySTLAllocator.h  RangeMemorySTLAllocator.hpp
src/MemoryAllocation/UnixImpl/: MemAllocatorUnixImp.hpp  RangeMemAllocatorUnixImp.hpp
src/UnixImpl/: MemAllocatorUnix.hpp
